# producthunt-scraper

./: README.md  bigquery_create_table.txt  config.yaml.example  main.py  main_sequential.py  pyproject.toml  requirements.txt  test_run.ipynb
producthunt_scraper/: __init__.py
producthunt_scraper/core/: bigquery.py  json_output.py  model.py  script.py
producthunt_scraper/scraper/: base_scraper.py  parser.py
